--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -1,53 +1,49 @@
-version: '3.8'
+name: Build, Test, and Deploy
 
-services:
-  # MySQL Database Service
-  db:
-    image: mysql:8.0
-    container_name: mysql_db
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: app_db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpassword
-    volumes:
-      - db_data:/var/lib/mysql
-    networks:
-      - app_network
+on:
+  push:
+    branches:
+      - main  # Triggers deployment on push to main branch
+  pull_request:
+    branches:
+      - main  # Triggers workflow on pull requests to main branch
 
-  # phpMyAdmin Service
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
-    environment:
-      PMA_HOST: db  # link to MySQL service
-      PMA_PORT: 3309
-      MYSQL_ROOT_PASSWORD: rootpassword
-    ports:
-      - '8080:80'
-    depends_on:
-      - db
-    networks:
-      - app_network
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  # Web Application Service (e.g., PHP)
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile  # Dockerfile for the web app
-    container_name: web_app
-    ports:
-      - '8000:82'  # Expose port 8000 for the web service
-    volumes:
-      - ./app:/var/www/html  # Mount application code
-    depends_on:
-      - db
-    networks:
-      - app_network
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-volumes:
-  db_data:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-networks:
-  app_network:
-    driver: bridge
+      - name: Build Docker image
+        run: docker build -t yourusername/yourapp:${{ github.sha }} .
+
+      - name: Push Docker image to Docker Hub
+        run: docker push yourusername/yourapp:${{ github.sha }}
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to Server
+        env:
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+          DOCKER_IMAGE: yourusername/yourapp:${{ github.sha }}
+        run: |
+          echo "$SSH_KEY" > /tmp/deploy_key
+          chmod 600 /tmp/deploy_key
+          ssh -i /tmp/deploy_key -o StrictHostKeyChecking=no user@your-server.com << 'EOF'
+            docker pull $DOCKER_IMAGE
+            docker stop yourapp || true
+            docker rm yourapp || true
+            docker run -d --name yourapp -p 80:80 $DOCKER_IMAGE
+          EOF
